force-app/main/default/objects/Entitlement_article__c/Entitlement_article__c.object-meta.xml
<CustomObject>
    <label>Entitlement Article</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>