force-app/main/default/objects/Entitlement_article__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>