force-app/main/default/objects/Entitlement_article__c/fields/Goods__c.field-meta.xml
<CustomField>
    <fullName>Goods__c</fullName>
    <label>Goods</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Microwave</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>