force-app/main/default/objects/Entitlement_article__c/fields/Top_up_Volume__c.field-meta.xml
<CustomField>
    <fullName>Top_up_Volume__c</fullName>
    <label>Top up Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>